Fixed overflow issue

--- a/website/src/layouts/home/home.component.css
+++ b/website/src/layouts/home/home.component.css
@@ -1,3 +1,4 @@
 .home-container {
     position: relative;
+    overflow-x: hidden;
 }
